# omniscientia

./: .env  Cargo.toml  config.json  omniscientia.db  omniscientia_local.db
memory/: SOLE.md  skills.md  tools.md
python_workers/: __init__.py
src/: cli.rs  config.rs  main.rs
src/channels/: traits.rs
src/llm/: context.rs  mod.rs  prompt.rs  provider.rs
src/memory/: database.rs  fs.rs
src/server/: bot_server.rs  mod.rs
src/tools/: executor.rs
src/tui/: app.rs  markdown.rs  mod.rs
