[package]
name = "omniscientia"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
crossterm = "0.29.0"
dotenvy = "0.15"
libc = "0.2.186"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
